--- a/src/components/pages/Footer.css
+++ b/src/components/pages/Footer.css
@@ -50,3 +50,25 @@
   display: flex;
   justify-content: center;
 }
+
+.footer-links-wrapper {
+  display: flex;
+}
+
+.footer-link-items {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 16px;
+  text-align: left;
+  width: 160px;
+  box-sizing: border-box;
+}
+
+.footer-link-items h2 {
+  margin-bottom: 16px;
+}
+
+.footer-link-items > h2 {
+  color: #fff;
+}
