--- a/src/components/pages/Footer.css
+++ b/src/components/pages/Footer.css
@@ -72,3 +72,40 @@
 .footer-link-items > h2 {
   color: #fff;
 }
+
+.footer-link-items a {
+  color: #fff;
+  text-decoration: none;
+  margin-bottom: 8px;
+}
+
+.footer-link-items a:hover {
+  color: #e9e9e9;
+  transition: 0.3s ease-out;
+}
+
+.footer-email-form h2 {
+  margin-bottom: 32px;
+}
+
+.footer-input::placeholder {
+  color: #b1b1b1;
+}
+
+.social-icon-link {
+  color: #fff;
+  font-size: 24px;
+}
+
+.social-media {
+  max-width: 1000px;
+  width: 100%;
+}
+
+.social-media-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  max-width: 1000px;
+}
